# resno

./: .gitignore  README.md  pyproject.toml
Z_paper_content/: plot_drivers_and_solutions.py
autoencoder/: autoencoder.py
configs/: config.toml
data/: __init__.py  driver_and_solution_info.py  driving_signals.py  rdes.py
resno/: dataloaders.py  resno_model.py  train.py
src/autoencoder/: __init__.py  train_compressor.py
src/data/: driver_and_solution_info.py  driving_signals.py  process_eigenworms.py  rdes.py
src/resno/: config.py  dataloaders.py  resno_model.py  train.py
